--- a/index.html
+++ b/index.html
@@ -4,13 +4,31 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-   
+    <link rel="stylesheet" href="./index.css" />
     <title>Javascript</title>
   </head>
   <body>
-    <h1>salom</h1>
+    <!-- <img
+      src="https://cdn4.iconfinder.com/data/icons/shopping-406/48/48_pixel-03-22-256.png"
+      alt=""
+    />
 
+    <img
+      src="https://cdn4.iconfinder.com/data/icons/shopping-406/48/48_pixel-03-22-256.png"
+      alt=""
+    />
+    <img
+      src="https://cdn4.iconfinder.com/data/icons/shopping-406/48/48_pixel-03-22-256.png"
+      alt=""
+    />
+     -->
 
+    <!-- <div id="test"></div>
+    <p>
+       X:<span id="offX">0</span> 
+       <br><br>
+       Y:<span id="offY">0</span>
+    </p> -->
 
     <script src="./index.js"></script>
   </body>
